01-operator/05-greetings-operator-go/app-deployer/app/src/kube-resources/01-namespace.yaml
  
apiVersion: v1
kind: Namespace
metadata:
  name: g-greetings-operator-app-pro
  labels:
    app:  g-greetings-operator-app-app
