01-operator/05-greetings-operator-go/app-deployer/app/src/kube-resources/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: g-greetings-operator-app-service
  namespace: g-greetings-operator-app-pro
  labels:
    app: g-greetings-operator-app-app
    name: g-greetings-operator-app-service
spec:
  ports:
    - name: main-container
      port: 8080
      targetPort: 8080
  selector:
    name: g-greetings-operator-app-deployment
