01-operator/05-greetings-operator-go/app-deployer/app/src/kube-resources/04-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: g-greetings-operator-app-route
  namespace: g-greetings-operator-app-pro
  labels:
    app: g-greetings-operator-app-app
    name: g-greetings-operator-app-route
spec:
  path: /
  to:
    kind: Service
    name: g-greetings-operator-app-service
    weight: 100
  port:
    targetPort: my-container
